# travel-buddy-gemini

./: .gitignore  README.md  diagnose_spark_v3.py  pyproject.toml  streamlit_app.py
app/: main.py  prompt_templates.py  traveler_types.py
app/models/: traveler_types.py
app/routers/: map_router.py  trip.py
app/services/: context_extraction.py  gemini_service.py  map_services.py  poi_engine.py  scoring.py
app/utils/: config.py
data/yelp/: prepare_yelp_pyspark.py
examples/: sample_output.md
